Fixed avatars showing as square behind unavailable status borders.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -340,6 +340,7 @@ button
   border-radius 50%
   background-clip padding-box
   vertical-align middle
+  background-clip padding-box
   background-repeat no-repeat
   background-position center
   background-size cover
